# karpathy-zero-to-hero-clone

./: README.md  build_makemore_yay.ipynb  pyproject.toml
01 - building micrograd/: engine.py  graph.py  learned.md  micrograd_from_scratch.ipynb  nn.py
02 - building makemore/: build_makemore_yay.ipynb  what i learned.md
03 - building makemore MLP/: build_makemore_MLP.ipynb  summary.ipynb
04 - Activation & Gradients, BatchNorm/: part3.ipynb
05 - Becoming a Backprop Ninja/: part4.ipynb
06 - Building a Wavenet/: part5.ipynb  part5_backup.ipynb
07 - buildGPT/: gpt-dev.ipynb  gpt-dev.py  gpt-ex1.py  gpt-lecture.py  simpleAdamOpt.ipynb  simpleAdamOpt.py
08 - miniBPE/: Tokenization.ipynb
09 - GPT2/: TODO.md  build_gpt2.py  build_gpt2_colab.ipynb  build_gpt2_colab_me.ipynb  fineweb-bbc-news.py  fineweb.py  gpt2_TODO.ipynb  hellaswag.py  play.ipynb
data/: monalisa.txt
