[project]
name = "build-makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "pygraphviz",
]

[project.optional-dependencies]
cpu = [
    "torch==2.5.0",
    "torchvision==0.20.0",
]
cu121 = [
    "torch==2.5.0",
    "torchvision==0.20.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
