[project]
name = "zero-to-hero-clone-by-hand"
version = "0.1.0"
description = "zero-to-hero-clone-by-hand"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.1",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.5.0",
    "torchvision==0.20.0",
]
cu121 = [
    "torch==2.5.0",
    "torchvision==0.20.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
